# ni_rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: fs.rs  lib.rs  main.rs  parse.rs  runner.rs  utils.rs
src/snapshots/: ni_rs__fs__tests__get_package_json_works.snap
src/test/: package.json
